# dsm

./: .clippy.toml  .dockerignore  .editorconfig  .gitignore  01-simple-escrow_client.ts  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  QUICKSTART.md  README.md  SECURITY.md  SUPPORT.md  ble-repo-zapper.py  codecov.yml  deny.toml  fix_bridge.patch  harden_ble.sh  package-lock.json  package.json  patch.diff  patch_ble.sh  patch_ble_coordinator.py  patch_ble_coordinator.sh  patch_ble_coordinator_2.py  patch_ble_coordinator_resp.sh  patch_ble_handler_conf.sh  patch_ble_handler_req.sh  patch_ble_handler_resp.sh  patch_ble_rust.rs  patch_companion.sh  patch_receipts.py  patch_receipts2.py  patch_server.diff  pnpm-lock.yaml  pnpm-workspace.yaml  refactor.py  (+6 more)
dsm-gen/: Cargo.toml  README.md  build.rs  final-test.ts  stablecoin-policy-client.ts  test-policy.yaml  test-vault-full.ts  test-vault.yaml  test-vault_client.ts  vault-schema.json
dsm-gen/src/: compiler.rs  lib.rs  main.rs  schema.rs
dsm-gen/src/generators/: kotlin.rs  mod.rs  rust_gen.rs  swift.rs  typescript.rs
dsm-gen/tests/: detfi_examples.rs  enhanced_policy_test.rs
dsm_client/deterministic_state_machine/: .env.template  Cargo.toml  deny.toml  dsm_client_config.json  dsm_env_config.json  fix18.py  fix19.py  fix20.py  fix21.py  fix22.py  fix23.py  fix_hashchain_tests.py  rust-toolchain.toml  rustfmt.toml  storage_node_config.toml
dsm_client/deterministic_state_machine/.cargo/: config.toml
dsm_client/deterministic_state_machine/dsm/: CONTRIBUTING.md  Cargo.toml  Dockerfile  Operations.md  README.md  build.rs  deny.toml  test.txt
dsm_client/deterministic_state_machine/dsm/.cargo/: config.toml
dsm_client/deterministic_state_machine/dsm/benches/: correct_benchmark.rs  timing_analysis.rs
dsm_client/deterministic_state_machine/dsm/data/: config.json
dsm_client/deterministic_state_machine/dsm/docs/: DSMOnboarding.md  TRACEABILITY.md
dsm_client/deterministic_state_machine/dsm/examples/: simple_state_context_demo.rs
dsm_client/deterministic_state_machine/dsm/proptest-regressions/: verification.txt
dsm_client/deterministic_state_machine/dsm/src/: batching.rs  emissions.rs  envelope.rs  lib.rs  limits.rs  pbi.rs  performance.rs  prelude.rs  telemetry.rs  verification.rs
dsm_client/deterministic_state_machine/dsm/tests/: bilateral_state_isolation_test.rs  bilateral_transaction_integration_tests.rs  commitment_integration_test.rs  device_tree_root_lifecycle_test.rs  direct_state_verification_test.rs  dsm_end_to_end_test.rs  hashchain_verification_test.rs  integration_optimizations_test.rs  smt_tripwire_theorem.rs  smt_tripwire_vectors.rs  universal_faucet_invoke_test.rs  vector_tests.rs  whitepaper_kat.rs
dsm_client/deterministic_state_machine/dsm_sdk/: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml
dsm_client/deterministic_state_machine/dsm_sdk/.cargo/: config.toml.template
dsm_client/deterministic_state_machine/dsm_sdk/.dsm_testdata/: dsm_app_state.pb
dsm_client/deterministic_state_machine/dsm_sdk/examples/: ack_for_device.rs  b0x_e2e.rs  bilateral_transaction_example.rs  ble_loopback.rs  detfi_demo.rs  repro_auth.rs  sofi_demo.rs  submit_to_recipient.rs
dsm_client/deterministic_state_machine/dsm_sdk/src/: event.rs  (+16 more)
dsm_storage_node/: .env.template  Cargo.toml  Dockerfile  Dockerfile.cloud  README.md  cleanup_index.sql  config-dev-node1.toml  config-dev-node2.toml  config-dev-node3.toml  config-dev-node4.toml  config-dev-node5.toml  setup_db.sql  setup_dsm_db.sql  start_dev_nodes.sh
dsm_storage_node/config/: local-dev.toml  production.toml
dsm_storage_node/config/dev/: node1.toml  node2.toml  node3.toml  node4.toml  node5.toml
dsm_storage_node/deploy/: check_nodes.sh  generate_node_configs.sh  provision_aws.sh  provision_gcp.sh  push_and_start.sh  teardown_aws.sh  teardown_gcp.sh
dsm_storage_node/migrations/: 20250122_add_sequence_expiration.sql  20250928_alter_inbox_constraints.sql  20250928_create_devices.sql  20250928_create_inbox_receipts.sql  20250928_create_inbox_spool.sql
dsm_storage_node/scripts/: README.md  generate_tls_certificates.sh  monitor_firewall.sh  production_security_setup.sh  quick_tls_setup.sh  reset_firewall.sh  setup_firewall.sh  setup_firewall_macos.sh  setup_monitoring.sh  start_production.sh  stop_dev_nodes.sh  test_hashchain_binding_chain.sh  test_protocol_metrics_binding_chain.sh
dsm_storage_node/scripts/dev/: check_node_status.sh  start_dev_nodes.sh  stop_dev_nodes.sh
dsm_storage_node/scripts/tests/: test_hashchain_binding_chain.sh  test_protocol_metrics_binding_chain.sh
dsm_storage_node/src/: chaos_testing.rs  dev_replication.rs  dlv.rs  lib.rs  main.rs  operational.rs  partitioning.rs  replication.rs  timing.rs
dsm_storage_node/src/api/: admin.rs  authenticate.rs  bytecommit.rs  device_api.rs  discovery.rs  dlv_slot.rs  drain_proof.rs  genesis.rs  gossip.rs  identity_devtree.rs  identity_tips.rs  mod.rs  network_config.rs  object_list.rs  object_store.rs  paidk.rs  policy.rs  rate_limit.rs  recovery_capsule.rs  registry.rs  registry_scaling.rs  registry_tests.rs  unilateral_api.rs  unilateral_api_routing_tests.rs  validators.rs
dsm_storage_node/src/auth/: mod.rs
dsm_storage_node/src/db/: mod.rs  pg.rs  sqlite.rs
dsm_storage_node/src/tests/: policy_tests.rs
dsm_storage_node/terraform/: instances.tf  variables.tf
dsm_storage_node/terraform-gcp/: outputs.tf
dsm_storage_node/terraform/aws/: main.tf  outputs.tf
dsm_storage_node/terraform/gcp/: main.tf  user_data.sh  variables.tf
dsm_storage_node/tests/: bytecommit_chain.rs  fanout_dev_replication.rs  integration_submit.rs  object_store.rs  paidk_gating.rs  policy_tests.rs  registry_gate.rs
dsm_storage_node/tests/common/: mod.rs
tools/vertical_validation/: Cargo.toml
tools/vertical_validation/src/: adversarial_bilateral.rs  benchmark.rs  bilateral_throughput.rs  crypto_kat.rs  implementation_traces.rs  lean_checker.rs  local_nodes.rs  main.rs  proof_runner.rs  property_tests.rs  report.rs  tla_runner.rs  tla_trace_replay.rs
(+1206 files in other folders)
