[workspace]
resolver = "2"
members = [
    "dsm_client/deterministic_state_machine/dsm",
    "dsm_client/deterministic_state_machine/dsm_sdk",
    "dsm_storage_node",
    "tools/vector_runner",
    "tools/vector_builder",
    "tools/vertical_validation"
]

[workspace.package]
license = "MIT OR Apache-2.0"

[workspace.lints.clippy]
# Keep only targeted denials; allow formatting/doc/style lints to warn, not fail
uninlined_format_args = "warn"
unused_async = "deny"

# Production safety: warn on unwrap/expect/panic in non-test code
# These can cause runtime panics and should be avoided in production paths
# Build scripts, tests, and examples can override with #[allow(clippy::unwrap_used)]
# Start with "warn" to identify issues without blocking builds
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
# Also warn on unwrap in result contexts
unwrap_in_result = "warn"

# Allow all other warnings with lower priority
all = { level = "allow", priority = -1 }
pedantic = { level = "allow", priority = -1 }
# Explicitly allow documentation warnings
missing_errors_doc = "allow"
doc_markdown = "allow"

## Root is a pure workspace manifest; no [package] here to avoid cargo metadata errors.
