[package]
name = "dsm-gen"
version = "1.0.0"
edition = "2021"
description = "DSM Code Generator - One-click developer tooling for Vault & Policy Clients"
repository = "https://github.com/DSM-Deterministic-State-Machine/deterministic-state-machine"
license = "MIT OR Apache-2.0"
authors = ["DSM Development Team"]
keywords = ["dsm", "codegen", "vault", "policy", "typescript", "kotlin", "swift"]
categories = ["development-tools", "template-engine"]

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }

# Schema generation
schemars = "1.2"

# YAML/JSON processing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "2.0.18"

# Hashing for reproducible builds
blake3 = "1.5"

# Proto runtime (mirrors dsm_app.proto types for compile-time drift detection)
prost = "0.13"
prost-types = "0.13"

# Logging
log = "0.4"
env_logger = "0.10"

[[bin]]
name = "dsm-gen"
path = "src/main.rs"

[lib]
name = "dsm_gen"
path = "src/lib.rs"

[build-dependencies]
prost-build = "0.13"
