[package]
name = "dsm_storage_node"
version = "0.1.0-beta.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Storage node for the Deterministic State Machine (DSM)"


[dependencies]
# Core async runtime
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.31"

# HTTP server
axum = { version = "0.8", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }              # TLS listener
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"             # load PEM cert/key
tower = { version = "0.5", features = ["limit", "timeout"] }
tower-http = { version = "0.6", features = ["trace", "set-header", "limit", "metrics"] }

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.75"

# Cryptography (quantum-resistant)
blake3 = "1.4.0"
ml-kem = "0.2.0"
rand = "0.8.5"
zeroize = { version = "1.6.0", features = ["derive"] }
subtle = "2"

# Configuration
clap = { version = "4.4.3", features = ["derive"] }
config = "0.15.22"
toml = "0.8.20"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
log = "0.4"
tracing-log = "0.2"

# HTTP Client
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls"] }

# Database (PostgreSQL — default)
tokio-postgres = { version = "0.7.10", default-features = false, features = ["runtime"], optional = true }
deadpool-postgres = { version = "0.14.1", optional = true }
tokio-postgres-rustls = { version = "0.12", optional = true }
rustls-native-certs = "0.7"      # use system roots (optional)
webpki-roots = "1.0.6"

# Database (SQLite — local-dev only)
rusqlite = { version = "0.39.0", features = ["bundled"], optional = true }

# Async traits for health checks
async-trait = "0.1"

# Deterministic tick sources live in dsm core

# DSM Core (for SPHINCS+ and shared types)
dsm = { version = "0.1.0-beta.1", path = "../dsm_client/deterministic_state_machine/dsm" }

# DSM SDK (for centralized utilities like base32 Crockford)
dsm_sdk = { version = "0.1.0-beta.1", path = "../dsm_client/deterministic_state_machine/dsm_sdk" }

# Protobuf support
prost = "0.13"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
once_cell = "1.19"

[features]
default = ["strict", "postgres"]
strict = []
postgres = ["dep:tokio-postgres", "dep:deadpool-postgres", "dep:tokio-postgres-rustls"]
local-dev = ["dep:rusqlite"]
dev-genesis = []
dev-vault = []
dev-inbox-blinded = []
dev-discovery = []
unilateral = []
dev-replication = []
chaos-testing = []
benchmarking = []

[[bin]]
name = "storage_node"
path = "src/main.rs"

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }
prost = "0.13"
