[workspace]
members = [
    "dsm",
    "dsm_sdk",
]
resolver = "2"

[workspace.package]
version = "0.1.0-beta.1"
authors = ["DSM Development Team"]
edition = "2021"
repository = "https://github.com/deterministicstatemachine/dsm"
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = 3
lto = false  # Disable LTO to preserve JNI exports
codegen-units = 1
strip = false  # Don't strip symbols for JNI

