[package]
name = "dsm_vertical_validation"
version = "0.1.0"
edition = "2021"
publish = false
description = "Vertical Validation: TLA+ model checking + scaling benchmarks + investor report"

[[bin]]
name = "vertical-validation"
path = "src/main.rs"

[dependencies]
# Async runtime for HTTP requests and process spawning
tokio = { version = "1.32", features = ["full"] }

# HTTP client for storage node API calls
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Protobuf encoding for ByteCommitV3
prost = "0.12"

# BLAKE3 hashing with domain separation for test data
blake3 = "1.4"

# Error handling
anyhow = "1.0"

# Report serialization (JSON is permitted in display/reporting layer per CLAUDE.md rule 2)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Regex for parsing TLC model checker output
regex = "1.10"

# Wall-clock timing for benchmark latency (operational metric per CLAUDE.md rule 4)
instant = "0.1"

# Direct access to core DSM types, state machine, and crypto primitives
dsm = { path = "../../dsm_client/deterministic_state_machine/dsm" }

# Deterministic seeded RNG for reproducible property tests
rand = "0.8"
rand_chacha = "0.3"

[lints]
workspace = true
