[package]
name = "dsm"
version = "0.1.0-beta.1"
edition = "2021"
authors = ["DSM Development Team"]
description = "Deterministic State Machine - Pure Core Business Logic (NO JNI)"
repository = "https://github.com/DSM-Deterministic-State-Machine/deterministic-state-machine"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cryptography", "identity", "state-machine", "quantum", "tokens"]
categories = ["cryptography", "authentication"]

[lints.rust]
# Do not blanket-deny all warnings; keep critical ones strict.
warnings = "warn"
unused_must_use = "deny"

[features]
default = []                     # NO JNI, demos, or HTTP features in core - pure business logic
bluetooth = ["dep:tokio-stream"]
storage   = ["rocksdb"]
threadsafe = []
test-mock  = []
jni = ["dep:jni"]                         # JNI feature for Android integration
examples = []                    # Gate example/demo-only items to avoid prod warnings
bridge = ["dep:sled"]    # Geo-faucet bridge feature
web-stack = ["dep:axum", "dep:tower"]
perf = []                         # Performance utilities and benchmarks
# Enable additional test-only APIs and helpers in core when building tests/integration
testing = []
sphincs-trace = []                # Enable verbose SPHINCS+ tracing (debug only)
 formal = []
faucet = [] # Enable faucet functionality

[dependencies]
# Data integrity and checksums
crc32fast = "1.3"

# Core numeric processing
num-bigint = "0.4.6"
num-traits = "0.2.17"
num-integer = "0.1.46"
num-primes = "0.3.0"

# Async runtime
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "time", "fs", "io-util", "sync"] }
async-trait = "0.1.77"
futures = { version = "0.3.30", default-features = false, features = ["std", "executor"] }

# Error handling
thiserror = "1.0.57"
anyhow = "1.0.99"

# CLI
clap = { version = "4.5.4", features = ["derive"] }

# Serialization (no JSON)
prost = "0.13"
prost-types = "0.12"
base32 = "0.4"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }



# QR code dependencies removed due to fundamental incompatibility with SPHINCS+ signatures
# SPHINCS+ signatures (7KB-35KB) exceed maximum QR code capacity (~3KB for Version 40 with low ECC)

# Bitcoin bridge support
bitcoin = { version = "0.32", default-features = false, features = ["std"] }

# Cryptography - core
blake3 = "1.5.0"
hmac = "0.12.1"
sha2 = "0.10.8"
pbkdf2 = "0.12.2"
rand_chacha = "0.9.0"
getrandom = "0.4.2"
merlin = "3.0.0"
zeroize = { version = "1.7.0", features = ["zeroize_derive"] }
subtle = "2.5.0"
constant_time_eq = "0.3.0"
# Security-hardened cryptographic primitives - RING REMOVED (caused SIGILL)
# ring = { version = "0.17.14", features = ["std"] }  # REMOVED - caused SIGILL on some ARM devices
# Use RustCrypto alternatives instead
p256 = { version = "0.13.2", features = ["ecdsa", "pkcs8"] }  # ECDSA P-256
p384 = { version = "0.13.0", features = ["ecdsa", "pkcs8"] }  # ECDSA P-384
ff = "0.13.0"

# Post-quantum cryptography - REPLACED with pure Rust implementation
ml-kem = { version = "0.2.0", features = ["deterministic"] }  # Pure Rust FIPS 203 ML-KEM implementation (replaces pqcrypto-mlkem)
# pqcrypto-traits = { version = "0.3.5", features = ["std"] }  # REMOVED: No longer needed  
# pqcrypto-mlkem = "0.1.0"  # REMOVED: Hardware optimized, caused SIGILL on Android
# pqcrypto-sphincsplus has been replaced with a pure Rust implementation

jni = { version = "0.21", optional = true }

# Networking
# reqwest removed from core - networking belongs in SDK
# reqwest = { version = "0.12.2", default-features = false, features = ["rustls-tls", "json"] }
# url removed from core - networking belongs in SDK
# url = "2.4.0"
# urlencoding removed from core - networking belongs in SDK
# urlencoding = "2.1.3"
rcgen = "0.12" # For certificate generation

# Bluetooth support (optional)
tokio-stream = { version = "0.1.14", optional = true, features = ["sync"] }

# Storage - Optional for server-side components only (mobile apps use HTTP API)
rocksdb = { version = "0.21.0", features = ["multi-threaded-cf"], optional = true }
sled = { version = "0.34", optional = true }
once_cell = "1.19"
# Removed dsm-storage-node dependency to avoid circular dependency

# Compression
flate2 = "1.0.28"  # For serialization_metrics benchmark

# Metrics and instrumentation (no JSON logging)
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
metrics = "0.21.1"


# Utilities
log = "0.4.20"
bytes = "1.5.0"
hostname = "0.3.1"
tokio-util = { version = "0.7.10", features = ["codec"] }
lazy_static = "1.4.0"
lru = "0.7"
parking_lot = { version = "0.12.1", features = ["serde"] }
zerocopy = "0.7.35"
bitflags = "2.4.2"
arrayref = "0.3.9"
argon2 = "0.5.3"
time = { version = "0.3.41", features = ["macros"] }

rand = "0.8.5"
dirs = "5.0.1"
uuid = { version = "1.9", features = ["std"] }
# serde_cbor removed from code paths (unmaintained); deterministic CBOR is hand-encoded locally
# Prefer stable crypto crates to reduce duplicate dependency versions across workspace.
aes-gcm = "0.10.3"

# Server dependencies
actix-web = { version = "4.4.0", optional = true }
env_logger = "0.10.0"

# Type safety and validation
derive_more = { version = "1.0.0", features = ["from", "display", "error", "debug", "into"] }

# Property-based testing (used by verification module)
proptest = "1.4.0"

# Web framework and middleware (optional; core must be network-agnostic by default; no JSON feature)
axum = { version = "0.8", features = ["tracing"], optional = true }
tower = { version = "0.4.13", features = ["util", "timeout", "load-shed", "limit"], optional = true }

# Network utilities
if-addrs = "0.13.3"
local-ip-address = "0.6.1"
num_cpus = "1.16.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio", "html_reports"] }
mockall = "0.12.1"
tempfile = "3.10.0"
test-log = { version = "0.2.14", features = ["trace"] }
quickcheck = "1.0.3"
rstest = "0.26.1"
serial_test = "3.0.0"

[build-dependencies]
prost-build = "0.12"
metrics-exporter-prometheus = "0.12.1"
protoc-bin-vendored = "3"

[lib]
crate-type = ["rlib"]  # Pure library - NO cdylib (JNI belongs in dsm_sdk)
doctest = false
