[package]
name = "dsm_sdk"
version = "0.1.0-beta.1"
edition = "2021"
description = "DSM SDK - Deterministic State Machine Software Development Kit"
repository = "https://github.com/DSM-Deterministic-State-Machine/deterministic-state-machine"
license = "MIT OR Apache-2.0"
authors = ["DSM Development Team"]
keywords = ["dsm", "state-machine", "quantum-resistant", "sdk"]
categories = ["cryptography", "authentication"]

[lib]
name = "dsm_sdk"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
doctest = false

# No binaries - just library

[features]
default = []
strict = []
demos = []
dev-discovery = ["mdns"]
jni = ["dep:jni"]
test-utils = []
bluetooth = ["tokio-stream"]
diagnostics = []
mdns = ["dep:mdns-sd"]
test-mock = []
# Use mock/local MPC for token creation (dummy participants + dummy entropy).
# Default OFF: real HTTP calls to storage nodes for beta builds.
# Enable for dev/test builds without local storage nodes running.
local-mpc = []
storage = []
examples = []
deny_fallback = []
# Optional local performance timing (uses std::time::Instant);
# core logic remains clockless via deterministic ticks when this is disabled.
perf-metrics = []
# web3 feature removed as part of protobuf-only purge
# default is stable KEK derivation for SoftVault
# opt-in: make KEK depend on STRICT env + HW timing (may vary across restarts)
softvault-kek-strict = []
[build-dependencies]
cbindgen = "0.28.0"
blake3 = "1.5.0"
anyhow = "1.0"
prost = "0.12"
prost-build = "0.12"
prost-types = "0.12"
tonic-build = { version = "0.12", default-features = false, features = ["prost"] }
protoc-bin-vendored = "3"
glob = "0.3"


[dependencies]
ctor = "0.2"
# Core dependencies
dsm = { path = "../dsm", default-features = false }

# JNI for Android integration
jni = { version = "0.21", optional = true }

# mDNS service discovery
mdns-sd = { version = "0.10.0", optional = true }

# Protobuf support
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base32 = "0.4"


# Core numeric processing
num-traits = "0.2.17"
num-integer = "0.1.46"
num-primes = "0.3.0"

# Async runtime
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "time", "fs", "io-util", "sync", "net"] }
async-trait = "0.1.77"
futures = { version = "0.3.30", default-features = false, features = ["std"] }

# Error handling
thiserror = "1.0.57"
anyhow = "1.0.99"
toml_edit = "0.22"

toml = "0.8.20"

# Storage

# Bitcoin bridge support
bitcoin = { version = "0.32", default-features = false, features = ["std"] }
# Cryptography
blake3 = "1.5.0"
# AEAD
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc", "std"] }
hmac = "0.12.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
getrandom = "0.2.12"
merlin = "3.0.0"
zeroize = { version = "1.7.0", features = ["zeroize_derive"] }

subtle = "2.5.0"
ff = "0.13.0"

# Post-quantum cryptography (pqcrypto-mlkem used via smart_commitment_sdk)

# Networking
rustls = { version = "0.21.10" }
rustls-pki-types = "0.2.1"
webpki = "0.22.2"
reqwest = { version = "0.12.2", default-features = false, features = ["rustls-tls", "json"] }
rcgen = "0.12"
tokio-rustls = "0.24"
url = "2.4.0"
urlencoding = "2"

# Bluetooth support (optional)
tokio-stream = { version = "0.1.14", optional = true, features = ["sync"] }

# Compression
flate2 = "1.0.28"
crc32fast = "1.3.2"

# Metrics and instrumentation
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
metrics = "0.21.1"

# Utilities
bip39 = "2.0.0"
once_cell = "1.19.0"
log = "0.4.20"
env_logger = "0.10.0"
uuid = { version = "1.9", features = ["v4", "v7", "std"] }
erased-serde = "0.4.1"
bytes = "1.5.0"
tokio-util = { version = "0.7.10", features = ["codec"] }
bitvec = "1.0.1"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
zerocopy = "0.7.35"
dirs = "5.0.1"
libc = "0.2"
bitflags = "2.4.2"
arrayref = "0.3.9"
argon2 = "0.5.3"

# Additional utilities
fastrand = "2.0.1"
num_cpus = "1.16.0"
hostname = "0.3.1"
rustc_version = "0.4.0"
tempfile = "3.10.0"
aes-gcm = "0.10.3"
bincode = "1.3"

# Database
rusqlite = { version = "0.30.0", features = ["bundled"] }

# Android logging
android_logger = "0.13.3"

# Protobuf types
prost-types = "0.12"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio", "html_reports"] }
mockall = "0.12.1"
tempfile = "3.10.0"
test-log = { version = "0.2.14", features = ["trace"] }
proptest = "1.4.0"
quickcheck = "1.0.3"
rstest = "0.18.2"
serial_test = "3.0.0"
dsm = { path = "../dsm", default-features = false, features = ["testing"] }


 
